# HTML2exe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  Makefile  PRIVACY.md  README.md  README_WINDOWS.md  final3.md  html2exe_pro.py  html2exe_pro_premium.py  html2exe_ultimate_ci.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/: release_notes_template.md
.github/workflows/: ci.yml
docs/: TROUBLESHOOTING.md
installer/: eula.txt  installer.nsi
scripts/: build_release_windows.ps1  smoke_test_windows.ps1
src/html2exe/: __init__.py  __main__.py  builder.py  cli.py  config.py  logging_utils.py  main.py  viewer.py
src/html2exe/cli/: main.py
src/html2exe/core/: builder.py  config.py  debugger.py  icon_generator.py  packager.py  preflight.py  webview_manager.py
src/html2exe/gui/: main.py
src/html2exe/utils/: dependencies.py
src/html2exe_pro_premium.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_app/: index.html
test_app_broken/: index.html
test_app_missing_module/: index.html  script.js
tests/: test_builder.py  test_cli.py  test_e2e_smoke.py  test_viewer.py
