[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "html2exe_pro_premium"
version = "2.0.0"
authors = [
  { name="HTML2EXE Pro Premium", email="author@example.com" },
]
description = "Convert HTML folders or URLs into Windows .exe desktop applications"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "appdirs>=1.4.0",
    "watchdog>=4.0.0",
    "flask>=3.0.0",
    "pywebview>=5.0.0",
    "requests>=2.32.0",
    "pillow>=10.4.0",
    "pyinstaller>=6.8.0",
    "psutil>=5.9.0",
    "packaging>=23.0",
    'pywin32>=306; platform_system=="Windows"',
]

[project.scripts]
html2exe-pro = "html2exe.main:main"

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
